# my_first_cmake_project

./: CMakeLists.txt  README.md  my_first_cmake_project.cpp
